--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ replay_pid*
 
 # 로컬 프로파일/민감 설정 파일 (원하는 것만 골라서 쓰면 됨)
 **/application.properties
-**/application.yml
 **/application.yaml
 **/application-local.yml
 **/application-local.yaml
@@ -54,6 +53,7 @@ replay_pid*
 *.secret
 secrets.*
 *.key
+env
 
 ### 로그 / 임시 파일 ###
 logs/
